kleine Änderungen